--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -12,7 +12,7 @@ body {
     background-color: #111021;
     padding: 20px 10px;
 }
-.header a {
+.header a , header > a:visited{
     float: left;
     color: white;
     text-align:center;
@@ -42,6 +42,9 @@ footer{
     width:100%;
 }
 
+footer > a, footer a:visited{
+    color: #a8ffd5;
+}
 @media screen and (max-width: 500px) {
     .header a {
         float: none;
