--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -58,6 +58,7 @@ footer{
     background-color: #111021;
     display: flex;
     flex-direction: row;
+    text-decoration: none;
     position:absolute;
     bottom:0;
     width:100%;
