--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -60,6 +60,13 @@ body {
     background-image: linear-gradient(rgb(27,27,51), rgb(13,10,31));
 }
 
+#bannerGrad{
+    height: 40px;
+    background-color: rgb(59,47,155);
+    background-image: linear-gradient(rgb(28,22,67),rgb(15,13,35));
+}
+
+
 
 
 
