--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -74,7 +74,12 @@ body {
     background-image: linear-gradient(rgb(28,22,67),rgb(15,13,35));
 }
 
-
+#button{
+    height: 30px;
+    color: rgb(56,49,157);
+    background-color: rgb(168,255,213) ;
+    text-align: center;
+}
 
 
 
