--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -75,10 +75,13 @@ body {
 }
 
 #button{
-    height: 30px;
-    color: rgb(56,49,157);
-    background-color: rgb(168,255,213) ;
     text-align: center;
+    padding :15px;
+    height: 30px;
+    color: rgb(168,255,213) ;
+    background-color: rgb(56,49,157);
+    font-size:25px;
+    width: 180px;
 }
 
 
