--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -62,7 +62,7 @@ body {
     height: 3vw;
 }
 /*center stuff */
-#grad1 {
+#backgroundGrad {
     height: 500px;
     background-color: black; /* For browsers that do not support gradients */
     background-image: linear-gradient(rgb(27,27,51), rgb(13,10,31));
@@ -82,6 +82,15 @@ body {
     background-color: rgb(56,49,157);
     font-size:25px;
     width: 180px;
+}
+#discount{
+    text-align:center;
+    padding-top: 7px;
+    height: 30px;
+    background-color: rgb(168,255,213);
+    color: black;
+    width:50px;
+    font-size: 20px;
 }
 
 
