--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -60,6 +60,7 @@ body {
 .profile .profilePicture{
     width: 3vw;
     height: 3vw;
+    border-radius: 5px;
 }
 /*center stuff */
 backgroundGrad {
