--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -73,6 +73,14 @@ body {
     background-image: linear-gradient(rgb(27,27,51), rgb(13,10,31));
     color:white;
 }
+input[type=text], input[type=password] {
+    width: 10%;
+ 
+    margin: 8px 0;
+    background-color: rgb(28,22,67);
+    border: 2px solid white;
+    border-radius: 4px;
+}
 
 bannerGrad{
     height: 40px;
