--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -56,19 +56,25 @@ body {
     width: 3vw;
     height: 3vw;
 }
+#topupBut{
+    padding-right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-
-.header-right, .header-left, .profile{
+ .header-left, .profile{
     padding: 7px;
 }
 
 .profile{
     display: flex;
+    flex: 0;
     align-items: center;
 }
 .profile .profilePicture{
-    width: 3vw;
-    height: 3vw;
+    width: 2vw;
+    height: 2vw;
     border-radius: 100%;
 }
 .profile_link > img:hover{
@@ -76,9 +82,8 @@ body {
     padding: 3px;
     border: #a8ffd5;
     background-color: #a8ffd5;
-
-
 }
+
 
 main{
     height: 100%;
