--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -12,7 +12,7 @@ body {
 }
 .header-right{
     display: flex;
-    flex: 1;
+    flex: 0.8;
     color: white;
     text-align:center;
 }
@@ -58,9 +58,10 @@ body {
 }
 #topupBut{
     padding-right: 0;
+    padding-left: 0;
     display: flex;
     align-items: center;
-    justify-content: center;
+
 }
 
  .header-left, .profile{
