--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -163,9 +163,20 @@ footer > a, footer a:visited{
 .gameBoxDesign{
    border-style: solid;
     border-color: crimson;
+    flex-wrap: wrap;
+    margin: 10px;
+    padding: 10px;
+    height: 200px;
+    width: 25%;
+
 }
 
 .gameContainer{
+    height: 100%;
+    width:100%;
     display: flex;
     flex-direction: row;
+    padding: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
