--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -172,11 +172,18 @@ footer > a, footer a:visited{
 }
 
 .gameContainer{
-    height: 100%;
-    width:100%;
+    height: 60%;
+    flex: 3;
     display: flex;
     flex-direction: row;
     padding: 20px;
     justify-content: center;
     flex-wrap: wrap;
+}
+.mainContainerGame{
+    display: flex;
+    flex-direction: row;
+}
+.gameSpacerSide{
+    flex: 1;
 }
