--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -4,7 +4,7 @@
     border: none;
 }
 
-html{height: 100%;}
+html{min-height: 100%;}
 body {
     height: 100%;
     margin: 0;
@@ -85,11 +85,6 @@ body {
     background-color: #a8ffd5;
 }
 
-
-main{
-    height: 100%;
-}
-
 /*center stuff */
 .backgroundGrad {
     background-color: black; /* For browsers that do not support gradients */
@@ -133,13 +128,14 @@ input[type=text], input[type=password] {
 
 
 footer{
-    margin-top: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: #111021;
     display: flex;
     flex-direction: row;
     text-decoration: none;
-    position:absolute;
-    bottom:0;
     width:100%;
 }
 
@@ -165,13 +161,12 @@ footer > a, footer a:visited{
     border-color: crimson;
     flex-wrap: wrap;
     margin: 10px;
-    padding: 10px;
-    height: 200px;
-    width: 25%;
+    height: 30%;
+    width: 50%;
 
 }
-
 .gameContainer{
+
     flex: 3;
     display: flex;
     flex-direction: row;
@@ -180,7 +175,7 @@ footer > a, footer a:visited{
     flex-wrap: wrap;
 }
 .mainContainerGame{
-    height: 100%;
+    height: 70%;
     display: flex;
     flex-direction: row;
 }
