--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -162,11 +162,11 @@ footer > a, footer a:visited{
     flex-wrap: wrap;
     margin: 10px;
     height: 30%;
-    width: 50%;
+    width: 40%;
+    min-width: 250px;
 
 }
 .gameContainer{
-
     flex: 3;
     display: flex;
     flex-direction: row;
