--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -4,7 +4,7 @@
     border: none;
 }
 
-html{min-height: 100%;}
+html{height: 100%;}
 body {
     height: 100%;
     margin: 0;
@@ -85,6 +85,11 @@ body {
     background-color: #a8ffd5;
 }
 
+
+main{
+    height: 100%;
+}
+
 /*center stuff */
 .backgroundGrad {
     background-color: black; /* For browsers that do not support gradients */
@@ -149,11 +154,13 @@ input[type=text], input[type=password] {
 
 
 footer{
-
+    margin-top: 0;
     background-color: #111021;
     display: flex;
     flex-direction: row;
     text-decoration: none;
+    position:absolute;
+    bottom:0;
     width:100%;
 }
 
@@ -179,11 +186,13 @@ footer > a, footer a:visited{
     border-color: crimson;
     flex-wrap: wrap;
     margin: 10px;
-    height: 300px;
-    width: 30%;
-    min-width: 250px;
+    padding: 10px;
+    height: 200px;
+    width: 25%;
+    min-height: 0;
 
 }
+
 .gameContainer{
     flex: 3;
     display: flex;
@@ -193,7 +202,7 @@ footer > a, footer a:visited{
     flex-wrap: wrap;
 }
 .mainContainerGame{
-    height: 70%;
+    height: 100%;
     display: flex;
     flex-direction: row;
 }
