--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -185,7 +185,7 @@ footer > a, footer a:visited{
 }
 /*Store page shite*/
 .gameBoxDesign{
-    box-shadow: 10px 10px #111021;
+    box-shadow: 0px 0px 10px #111021;
     flex-wrap: wrap;
     margin: 10px;
     height: 300px;
