--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -209,3 +209,38 @@ footer > a, footer a:visited{
 .gameSpacerSide{
     flex: 1;
 }
+
+/* for slideshow */
+.myslides{
+    display: none;
+}
+img{
+    vertical-align: middle
+}
+.slideshow-container{
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+.dot{
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+.active2{
+    background-color: #717171;
+}
+.fade{
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+@keyframes fade {
+    from{opacity: .4}
+    to{opacity: 1}
+}
