--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -213,7 +213,7 @@ footer > a, footer a:visited{
 }
 
 /* for slideshow */
-.myslides{
+.mySlides{
     display: none;
 }
 img{
@@ -229,7 +229,7 @@ img{
     width: 15px;
     margin: 0 2px;
     background-color: #fff;
-    border-radius: 50%;
+    border-radius: 20%;
     display: inline-block;
     transition: background-color 0.6s ease;
 }
