--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -252,3 +252,13 @@ img{
     background: rgba(29, 23, 74,.9);
     padding: 5px;
 }
+
+.storePageBoxPrice{
+
+}
+.storePriceParent{
+    display: flex;
+    flex-direction: column-reverse;
+    height: 240px;
+
+}
