--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -5,10 +5,12 @@
 }
 
 html{min-height: 100%;
-    height: 100%;
+    height: 150%;
 }
 body {
     height: 100%;
+    overflow:auto;
+    padding-bottom:100px;
     font-family: sans-serif;
 }
 
@@ -90,6 +92,7 @@ body {
 
 /*center stuff */
 .backgroundGrad {
+    height:1000px;
     background-color: black;
     background-image: linear-gradient(rgb(27,27,51), rgb(13,10,31));
     color:white;
@@ -108,7 +111,7 @@ body {
 .container{
     width:100%;
     height: 100%;
-    display: block;
+    display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -161,7 +164,9 @@ body {
 }
 
 footer{
-
+    position:relative;
+    margin-top: 90%;
+    clear:both;
     background-color: #111021;
     display: flex;
     flex-direction: row;
