--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -6,12 +6,12 @@
 }
 
 html{min-height: 100%;
-    height: 150%;
+    height: 100%;
 }
 body {
     height: 100%;
     overflow:auto;
-    padding-bottom:100px;
+    padding-bottom:10px;
     font-family: sans-serif;
 }
 
@@ -93,9 +93,9 @@ body {
 
 /*center stuff */
 .backgroundGrad {
-    height:1000px;
-    background-color: black;
-    background-image: linear-gradient(rgb(27,27,51), rgb(13,10,31));
+
+    background-color: rgb(27,27,51);
+    /*background-image: linear-gradient(to bottom ,rgb(27,27,51), rgb(13,10,31));*/
     color:white;
 
 }
@@ -130,18 +130,6 @@ body {
 
 }
 
-.bannerGrad{
-    width:50%;
-    display: flex;
-    flex-direction: row;
-
-    justify-content: center;
-    flex-wrap: wrap;
-
-    background-color: rgb(59,47,155);
-    background-image: linear-gradient(rgba(28,22,67,10), rgb(15, 13, 35));
-}
-
 
 
 
@@ -166,7 +154,8 @@ body {
 
 footer{
     position:relative;
-    margin-top: 90%;
+    margin-top:30%;
+
     clear:both;
     background-color: #111021;
     display: flex;
