--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -104,16 +104,31 @@ body {
     background-color: #3b2f9b;
     border: 0px solid white;
 }
-
+.topUpForm{
+    color: #111021;
+    
+    margin: 8px 0;
+    background-color: #3b2f9b;
+    border: 0px solid white;
+}
 .space{
     width:25%;
 }
+
 .container{
     width:100%;
     height: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+}
+.topUpBox{
+    width:50%;
+    font-size:30px;
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
 }
 .bannerGrad{
     width:50%;
