--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -246,6 +246,7 @@ footer > a, footer a:visited{
     background-color: #111021;
     font-size: 26px;
     padding: 30px;
+    margin-top: 50px;
 }
 /*Index page boxeessssss*/
 .indexMain{
