--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -243,7 +243,7 @@ footer > a, footer a:visited{
 .indexText{
     width: 100%;
     text-align: center;
-    background-color: #111021;
+    background-color: #3b2f9b ;
     font-size: 26px;
     padding: 30px;
     margin-top: 50px;
