--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -255,7 +255,7 @@ footer > a, footer a:visited{
     flex-direction: row;
 }
 .indexCenter{
-    width: 60%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -269,7 +269,7 @@ width: 20%;
     margin-top: 50px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .indexBox{
@@ -283,7 +283,7 @@ width: 20%;
     margin-top: 50px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .indexBox2{
@@ -292,4 +292,7 @@ width: 20%;
     background: #111021;
     height: 50px;
     text-align: center;
+}
+.indexBigBox{
+    width:400px;
 }
