--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -260,7 +260,8 @@ footer > a, footer a:visited{
    display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 75%;
+    margin-top: 25px;
 }
 .indexText{
     width: 100%;
