--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -260,7 +260,7 @@ footer > a, footer a:visited{
    display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 80%;
     margin-top: 25px;
 }
 .indexText{
@@ -314,7 +314,7 @@ width: 20%;
 .indexBox2{
     width:23%;
     float:left;
-    background: #111021;
+    background: #3b2f9b;
     height: 50px;
     text-align: center;
 }
