--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -16,6 +16,11 @@ body {
 
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #0F0D23;
+    opacity: 0.5;
+}
+
 /*Header shite*/
 .header-right{
     display: flex;
@@ -101,18 +106,20 @@ body {
 
 }
 .loginForms {
+    padding: 5px;
     color: #3b2f9b;
     width: 650px;
     height:50px;
     background-color: rgb(28,22,67);
-    font-size:40px;
+    font-size:35px;
 }
 .loginSubmit {
+    padding: 5px;
     color: #3b2f9b;
     width: 650px;
     height:50px;
     background-color: rgb(168,255,213);
-    font-size:40px;
+    font-size:35px;
     text-align: left;
 }
 .topUpForm{
@@ -169,7 +176,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     background-color: rgb(59,47,155);
-    background-image: linear-gradient(rgba(28,22,67,10),rgba(15,13,35,10));
+    background-image: linear-gradient(rgba(28,22,67,10), rgb(15, 13, 35));
 }
 .centerLogo{
     height:25vw;
@@ -184,7 +191,7 @@ body {
 
 
 .button{
-    background-image: linear-gradient(rgba(28,22,67,10),rgba(15,13,35,10));
+    background-image: linear-gradient(rgb(28, 22, 67),rgba(15,13,35,10));
     height:100%;
     color: #a8ffd5;
     width:100%;
