--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -8,10 +8,14 @@
 
 html{min-height: 100%;
     height: 100%;
+    background-color: #0D0A1F;
+
 }
 body {
     height: 100%;
     overflow:auto;
+    background: linear-gradient(to bottom , #1B1B33, #0d0a1f) no-repeat;
+    background-size: cover;
 
 
 }
@@ -99,8 +103,6 @@ body {
 
 /*center stuff */
 .backgroundGrad {
-    background-color: rgba(27,27,51,10);
-    /*background-image: linear-gradient(to bottom ,rgb(27,27,51), rgb(13,10,31));*/
     color:white;
 
 
@@ -124,14 +126,14 @@ body {
 }
 .topUpForm{
     color: #3b2f9b;
-    width: 350px;
+    width: 400px;
     height:50px;
     background-color: rgb(28,22,67);
     font-size:40px;
 }
 .topUpSubmit{
     background-color:#a8ffd5;
-    width: 100px;
+    width: 150px;
     height:50px;
     color: #3b2f9b;
     font-size:40px;
@@ -258,7 +260,7 @@ footer > a, footer a:visited{
     flex: .5;
 }
 .storePageBoxTitle{
-    background: rgba(29, 23, 74,.9);
+    background: rgba(255, 255, 255, 0.9);
     padding: 10px;
 }
 
@@ -287,7 +289,7 @@ footer > a, footer a:visited{
     background-color: #3b2f9b ;
     font-size: 26px;
     padding: 30px;
-    color: #a8ffd5;
+    color: #ffffff;
     background-image: linear-gradient(#3b2f9b,
     #271f69);
     margin-top: 50px;
@@ -338,7 +340,7 @@ width: 20%;
     float:left;
     background: #3b2f9b;
     height: 50px;
-
+    color: #a8ffd5;
     text-align: center;
 }
 .indexBigBox{
