--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -260,6 +260,8 @@ footer > a, footer a:visited{
 .storePageBoxTitle{
     background: rgba(29, 23, 74,.9);
     padding: 10px;
+    color:white;
+    text-align: center;
 }
 
 .storePageBoxPrice{
@@ -274,13 +276,13 @@ footer > a, footer a:visited{
     text-align: center;
     padding:1%;
     width:12%;
-    font-color:rgb(29, 23, 74);
+    color:black;
 }
 .storePriceParent{
     display: flex;
     text-align: right;
     flex-direction: column-reverse;
-    height: 233px;
+    height: 230px;
 
 
 }
