--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -260,7 +260,7 @@ footer > a, footer a:visited{
     flex: .5;
 }
 .storePageBoxTitle{
-    background: rgba(255, 255, 255, 0.9);
+    background: rgb(29, 23, 74);
     padding: 10px;
 }
 
@@ -276,7 +276,7 @@ footer > a, footer a:visited{
     text-align: center;
     padding:1%;
     width:12%;
-    font-color:rgb(29, 23, 74);
+    font-color: rgb(29, 23, 74);
 }
 .storePriceParent{
     display: flex;
