--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -415,3 +415,11 @@ width: 20%;
     align-items: center;
     text-align: center;
 }
+.reviewBigBox{
+    width:48%;
+    float:left;
+    background: #111021;
+    height: 250px;
+    color: #a8ffd5;
+    text-align: center;
+}
